--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "cybernetic-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.4.1",
   "type": "module",
+  "description": "Advanced cybernetic portfolio showcasing expert-level React TypeScript development",
+  "author": "JC LAMY <lamypro66@gmail.com>",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite --host",
+    "dev:debug": "vite --host --debug",
+    "build": "tsc && vite build",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer dist/assets/*.js",
+    "build:prod": "NODE_ENV=production npm run build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch",
+    "preview": "vite preview",
+    "preview:network": "vite preview --host",
+    "clean": "rm -rf dist node_modules/.vite",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:e2e": "playwright test",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "size-limit": "size-limit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
